HA-6712 / Compute Map - Fallback if map is not supported (#9)
* remove os-hidden classes from elements inside os-map tag if map is not supported

* update README.md

* apply os-hidden class for fallback content

--- a/src/styles/map.css
+++ b/src/styles/map.css
@@ -11,6 +11,10 @@ os-map {
   line-height: normal;
 }
 
+.os-hidden {
+  display: none;
+}
+
 .os-map-container {
   position: relative;
   width: auto;
